--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -7,34 +7,35 @@
     </a>
 
     <div class=" hidden lg:flex lg:w-auto lg:items-center lg:justify-center">
-      <a href=""
-        class="block mt-4 lg:inline-block lg:mt-0 text-white text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
-        Home
-      </a>
-      <a href="whoweare"
-        class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
-        Who we are
-      </a>
-      <a href="ourservices"
-        class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
-        Our Services
-      </a>
-      <a href="ourproduction"
-        class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
-        Our Production
-      </a>
-      <a href="academy"
-        class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
-        T-Lab Academy
-      </a>
-      <a href="shop"
-        class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
-        T-Lab Shop
-      </a>
-      <a href="contact"
-        class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
-        Contact Us
-      </a>
+        <a href="{% url 'index' %}"
+          class="block mt-4 lg:inline-block lg:mt-0 text-white text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
+          Home
+        </a>
+        <a href="{% url 'whoweare' %}"
+          class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
+          Who we are
+        </a>
+        <a href="{% url 'ourservices' %}"
+          class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
+          Our Services
+        </a>
+        <a href="{% url 'ourproduction' %}"
+          class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
+          Our Production
+        </a>
+        <a href="{% url 'academy' %}"
+          class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
+          T-Lab Academy
+        </a>
+        <a href="{% url 'shop' %}"
+          class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
+          T-Lab Shop
+        </a>
+        <a href="{% url 'contact' %}"
+          class="block mt-4 lg:inline-block lg:mt-0 text-orange-500 text-sm hover:text-white mx-4 transition-transform transform hover:scale-110">
+          Contact Us
+        </a>
+
       {% if user.is_authenticated %}
       <a href="{% url 'logout'%}" class="block lg:inline-block lg:mt-0 text-sm hover:text-black mx-4 transition-transform transform hover:scale-110">
         <div class="flex items-center">
@@ -106,7 +107,7 @@
           class="block mt-4 text-center text-orange-500 font-bold hover:text-white mx-4">
           T-Lab Shop
         </a>
-        <a href="contact" 
+        <a href="{% url 'contact'%}" 
           class="block mt-4 text-center text-orange-500 font-bold hover:text-white mx-4">
           Contact Us
         </a>
