--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -83,7 +83,7 @@
               <span>Total</span>
               <span>Rs {{total}}</span>
             </div>
-            <button class="flex mt-4 w-full justify-center rounded-full bg-orange-500 px-4 py-2 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-orange-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-500">Checkout</button>
+            <!-- <button class="flex mt-4 w-full justify-center rounded-full bg-orange-500 px-4 py-2 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-orange-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-500">Checkout</button> -->
 
           </div>
         </div>
