--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -39,8 +39,14 @@
             </div>
           </div>
           {% endfor %}
-          <h2 class="text-xl font-semibold m-4 text-black"> Billing Information</h2>
-          <p class="text-black text-3xl"> helo  djvb jsdv js v osjdnv kndsvlkn vdndkvn dsknkvnsd vsdkvnvk d vdsknvsd vk dvlkb zsdkndkv  dknlkdsvv  vskdnlknsb klvksdn b</p>
+          <h2 class="text-xl font-semibold m-4 text-black"> Shipping Information</h2>
+          <p class="text-gray-600 text-xs m-4">Please fill your shipping Information</p>
+          <div class="m-4 border border-gray-400 rounded-md p-4 w-full md:w-3/4"> <form method="POST" action="{% url 'billing_info'%}" >      
+             {{shipping_form.as_p}} 
+             {% csrf_token %}
+            <button type="submit" class="flex m-4 mt-4 rounded-full bg-orange-500 px-4 py-2 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-orange-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-500">Checkout</button>
+            </form>
+          </div>
           {% else %}
             <p class="text-sm text-black text-left p-4">There is nothing in the cart</p>
            {% endif %}
@@ -83,8 +89,6 @@
               <span>Total</span>
               <span>Rs {{total}}</span>
             </div>
-            <!-- <button class="flex mt-4 w-full justify-center rounded-full bg-orange-500 px-4 py-2 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-orange-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-500">Checkout</button> -->
-
           </div>
         </div>
       </div>
