--- a/cart/templates/base.html
+++ b/cart/templates/base.html
@@ -52,6 +52,7 @@
     {% endblock %}
     <footer>
         <div>
+            <p>&copy; 2023 T-Lab Studio. Designed by <a href="https://www.coolmotion.com">CoolMotion</a></p>
             <div class="footer-social">
                 <a href="https://www.facebook.com/tlabstudios/" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.youtube.com/@TLABPRODUCTIONS" target="_blank"><i class="fab fa-youtube"></i></a>
