--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -11,9 +11,12 @@
 
     <div class="relative text-white text-center z-10 fade-in">
       <h1 class="text-3xl md:text-3xl lg:text-5xl font-bold">Audio & Video </h1>
-      <h1 class="text-gray-200 text-2xl md:text-2xl lg:text-4xl font-bold" style="font-size: 2.4rem;">Production Studio
+      <h1 class="hidden sm:hidden md:hidden lg:inline text-gray-200 text-2xl md:text-2xl lg:text-4xl font-bold" style="font-size: 2.4rem;">Production Studio
       </h1>
-      <p class="mt-4 text-lg" style="color: #a7a7a7;">Creative + Music + Video + Graphics</p>
+      <h1 class=" lg:hidden  text-gray-200 text-2xl md:text-2xl lg:text-4xl font-bold" style="font-size: 1.55rem;">Production Studio
+      </h1>
+
+      <p class="mt-4 text-lg" style="color: #a7a7a7;">Creative + Music | Video | Graphics</p>
       <div class="flex justify-center space-x-4 p-10">
 
         <a href="https://wa.link/iej7r7">
@@ -29,34 +32,30 @@
     <div class="text-white p-10 section border-t border-orange-500 bbox" style="background-color: black">
       <div class="animated-text">
         <h3 class="text-5xl font-bold mb-5 text-center">Who we are</h3>
-        <p class="text-gray-500 text-m text-left">
-          T-lab studios is a leading production company specializing in #Trusted audio recording #Music composing #Video
-          production & Graphic Designing services </p>
+        <p class="text-gray-500 text-m text-left sm:px-10">
+          T-lab studios is a leading production company specializing in #Trusted HQ audio recording #Music composing #Video
+          production & Graphic Designing services since 2017 </p>
       </div>
     </div>
-    <div class="flex flex-wrap justify-center">
+    <!-- <div class="flex flex-wrap justify-center">
 
-      <!-- Box 1 -->
       <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox " data-aos="fade-up">
         <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="4">00</h1>
         <p class="text-md text-white">Awards</p>
       </div>
 
-      <!-- Box 2 -->
       <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
         data-aos-delay="100">
         <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="100">000</h1>
         <p class="text-md text-white">Songs</p>
       </div>
 
-      <!-- Box 3 -->
       <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
         data-aos-delay="200">
         <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="100">000</h1>
         <p class="text-md text-white">Commercials</p>
       </div>
 
-      <!-- Box 4 -->
       <div class="w-64 h-45 m-4 p-8 bg-black rounded-lg shadow-md text-center fade-in bbox" data-aos="fade-up"
         data-aos-delay="300">
         <h1 class="text-4xl font-bold mb-4 num text-orange-500" data-value="17">0</h1>
@@ -64,7 +63,14 @@
       </div>
 
 
+    </div> -->
+    <div class="flex justify-center">
+      <div class="items-center p-5" style="width: 90vw;">
+        <img src="{% static 'img/collage.webp' %}" alt="Description of your image" class="w-full" />
+      </div>
     </div>
+    
+    
   </section>
 
   <section class="p-10 section border-t border-orange-500">
@@ -84,28 +90,27 @@
           <i class="fas fa-microphone custom-large-icon"></i>
           <p class="text-gray-500">T-lab production house is the proud home to 2 state-of–the-art sound recording
             studios which are managed by professional team of sound engineers and composers.</p>
-          <a href="#welcome" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500">Learn More</a>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500">Learn More</a>
         </div>
         <div class="card red border border-orange-500">
           <p class="text-2xl p-4">Music Composing | Mix & Mastering Services</p>
           <i class="fas fa-headphones custom-large-icon"></i>
           <p class="text-gray-500">T-lab offers a wide range of services for music composing and sound designing for
             solo artists as well as groups. </p>
-          <a href="#composing" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
         </div>
         <div class="card red border border-orange-500">
           <p class="text-2xl p-4">Video production </p>
           <i class="fas fa-video custom-large-icon"></i>
           <p class="text-gray-500">T-lab production house not only offers a variety of services for audio productions
             but, we also offer a variety of services for video productions.</p>
-          <a href="#mixing" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
         </div>
         <div class="card red border border-orange-500">
           <p class="text-2xl p-4"> Graphic Designing services</p>
           <i class="fas fa-video custom-large-icon"></i>
-          <p class="text-gray-500">T-lab production house not only offers a variety of services for audio productions
-            but, we also offer a variety of services for video productions.</p>
-          <a href="#mixing" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
+          <p class="text-gray-500">T-Lab is your go-to for exceptional graphic design services that will make your product shine. Our team of skilled graphic designers specializes in creating eye-catching designs that will set your product apart from the competition.</p>
+          <a href="{% url 'ourservices'%}" class="mt-6 inline-block px-8 py-2 font-semibold text-orange-500 ">Learn More</a>
         </div>
       </div>
     </div>
@@ -122,7 +127,7 @@
       nonce="U7GQyWOw"></script>
     <div class="container mx-auto mt-5">
       <div class="flex flex-wrap">
-        <div class="w-full md:w-1/2 lg:w-1/3 mb-4 p-4">
+        <div class="w-full md:w-1/2 lg:w-1/2 mb-4 p-4">
           <div class="card mx-auto" style="max-width: 400px;">
             <div class="card-header">
               <div class="animated-text">
@@ -164,23 +169,7 @@
             </div>
           </div>
         </div>
-        <div class="w-full md:w-1/2 lg:w-1/3 mb-4">
-          <div class="flex items-center justify-center">
-            <div class="scard">
-              <p class="heading mb-8">
-                Follow us on social media
-              </p>
-              <div class="animated-text">
-                <a href="https://www.facebook.com/tlabstudios/" target="_blank" class="btn btn-primary me-2 mb-3"><i
-                    class="fab fa-facebook-f"></i> Facebook</a><br>
-                <a href="https://www.youtube.com/@TLABPRODUCTIONS" target="_blank" class="btn btn-danger me-2 mb-3"><i
-                    class="fab fa-youtube"></i> YouTube</a><br>
-                <a href="https://instagram.com/tlabstudioslk?igshid=MzRlODBiNWFlZA==" target="_blank"
-                  class="btn btn-info mb-3"><i class="fab fa-instagram"></i> Instagram</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </div>
   </section>
