--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: black;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', Arial;
 }
 
 * {
@@ -463,11 +463,11 @@ footer p {
 
 /*portfoilio banner*/
 .bg-section {
-  background-image: url(img/img01.png);
+  background-image: url(imgcollage.webp);
   /* Replace 'your-background-image.jpg' with your actual image path */
   background-size: cover;
   background-position: center;
-  height: 50vh;
+  width: fit-content;
   background-attachment: fixed;
 }
 
