--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -27,7 +27,7 @@
             class="block mt-4 lg:inline-block lg:mt-0 {% if active_page == 'academy' %}text-white {% endif %} text-sm hover:text-white mx-4 transition-transform transform hover:scale-110 ">
             T-Lab Academy
         </a>
-        <a href="{% url 'shop' %}"
+        <a href="{% url 'shop' %}" 
             class="block mt-4 lg:inline-block lg:mt-0 {% if active_page == 'cart' %}text-white {% endif %} text-sm hover:text-white mx-4 transition-transform transform hover:scale-110 ">
             T-Lab Shop
         </a>
@@ -86,27 +86,27 @@
     </div>
     <div id="menu" class="w-full bg-black  flex-grow lg:hidden hidden p-3 lg:mt-0" style="width: 100vw;">
       <div class="text-sm text-orange-500">
-        <a href="index" 
+        <a href="{% url 'index' %}"
           class="block mt-4 text-center  font-bold mx-4 {% if active_page == 'index' %}text-white {% endif %}">
           Home
         </a>
-        <a href="whoweare" 
+        <a href="{% url 'whoweare' %}"
           class="block mt-4 text-center  font-bold hover:text-white mx-4 {% if active_page == 'whoweare' %}text-white {% endif %}">
           Who We Are
         </a>
-        <a href="ourservices" 
+        <a href="{% url 'ourservices' %}"
           class="block mt-4 text-center  font-bold mx-4 {% if active_page == 'ourservices' %}text-white {% endif %}">
           Our Services
         </a>
-        <a href="ourproduction" 
+        <a href="{% url 'ourproduction' %}"
           class="block mt-4 text-center  font-bold mx-4 {% if active_page == 'ourproduction' %}text-white {% endif %}">
           Our Production
         </a>
-        <a href="academy" 
+        <a href="{% url 'academy' %}"
           class="block mt-4 text-center  font-bold mx-4 {% if active_page == 'academy' %}text-white {% endif %}">
           T-Lab Academy
         </a>
-        <a href="shop" 
+        <a href="{% url 'shop' %}" 
           class="block mt-4 text-center  font-bold mx-4 {% if active_page == 'shop' %}text-white {% endif %}">
           T-Lab Shop
         </a>
