--- a/home/templates/whoweare.html
+++ b/home/templates/whoweare.html
@@ -38,7 +38,7 @@
       <p class="text-gray-600 pb-2">Recording Engineer / Composer</p>
   </div>
   <div class="bg-black p-4 rounded-lg shadow-md mb-4">
-    <img src="{% static 'img/chothira.jpeg' %}" class="w-full h-48 object-contain mb-4" alt="Saliya Illangasinghe">
+    <img src="{% static 'img/Chothira.jpeg' %}" class="w-full h-48 object-contain mb-4" alt="Saliya Illangasinghe">
     <h3 class="text-lg text-white font-semibold">Chothira Shanka</h3>
     <p class="text-gray-600 pb-2">Video Director</p>
 </div>
