--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>T-Lab Studios - Audio and Video Production Studio in Sri Lanka</title>
     <link rel="icon" type="image/png" href="{% static 'img/favicon-32x32.png' %}">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <style>
@@ -64,9 +64,9 @@
     {% block content %}
     {% endblock %}
     
-    <footer>
+    <footer class="bg-zinc-950">
         <div>
-            <div class="footer-social">
+            <div class="footer-social ">
                 <p class="text-white"> Follow us for more details</p>
                 <a href="https://www.facebook.com/tlabstudios/" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.youtube.com/@TLABPRODUCTIONS" target="_blank"><i class="fab fa-youtube"></i></a>
