--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -7,7 +7,7 @@
     </div>
   </section>
   <section class="flex items-center justify-center min-h-screen bg-cover bg-center relative bg-pulse"
-    style="background-image: url('{% static 'img/banner.jpg'%}'); ">
+    style="background-image: url('{% static 'img/main banner.png'%}'); ">
 
     <div class="relative text-white text-center z-10 fade-in">
       <h1 class="text-3xl md:text-3xl lg:text-5xl font-bold">Audio & Video </h1>
